# oci-finops

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt
anomaly/: ml_detector.py  notifier.py  runner.py  statistical.py
dashboard/: README.md
dashboard/grafana/dashboards/: ai_team_spend.json  anomaly_monitor.json  budget_vs_actual.json  compartment_analysis.json  cost_overview.json  customer_spend.json  internal_spend.json  service_breakdown.json
dashboard/grafana/provisioning/dashboards/: finops.yaml
dashboard/grafana/provisioning/datasources/: postgres.yml
db/migrations/: 001_create_schema.sql  002_create_indexes.sql  003_create_materialized_views.sql  004_create_budgets_table.sql  005_create_anomalies_table.sql  006_customer_groups.sql
db/seed/: sample_budgets.sql
etl/: config.py  focus_parser.py  loader.py  oci_client.py  pipeline.py  scheduler.py  watermark.py
reports/: monthly_report.py
scripts/: refresh_views.py
terraform/: main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
terraform/modules/compute/: cloud-init.yaml  main.tf
terraform/modules/database/: main.tf
terraform/modules/iam/: main.tf
terraform/modules/network/: main.tf
tests/: conftest.py  test_anomaly_statistical.py  test_focus_parser.py  test_loader.py  test_watermark.py
